# ZPHR-STM32-0003

./: .vscode-ctags  CMakeLists.txt  Kconfig  README.md  dc_ram.ld  debug.conf  prj.conf
bsp/boards/witte/linum_dev/: Kconfig.defconfig  board.yml  linum_dev.dts  linum_dev.yaml
src/: main.c
